2010-11-29  Mario Sanchez Prada  <msanchez@igalia.com>

        Reviewed by Martin Robinson.

        [GTK] Null-check needed in DRT's AccessibilityUIElement::allAtributes()
        https://bugs.webkit.org/show_bug.cgi?id=50154

        Added missing checks to allAttributes().

        * DumpRenderTree/gtk/AccessibilityUIElementGtk.cpp:
        (AccessibilityUIElement::allAttributes): Added missing checks.

2010-11-29  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Allow pre-generation for package builds for WebKit2
        https://bugs.webkit.org/show_bug.cgi?id=50139

        Use a build variable for the generated directory path and set the
        value based on CONFIG just like for WebKit1.

        For non-package builds use a relative base path for the
        genrated directory just like for WebKit1.

        * WebKitTestRunner/InjectedBundle/qt/InjectedBundle.pro:
        * WebKitTestRunner/qt/WebKitTestRunner.pro:

2010-11-28  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Move some build logic from Qt to platform independent code
        https://bugs.webkit.org/show_bug.cgi?id=50134

        Create target directories inside generate-forwarding-headers.pl.

        * Scripts/generate-forwarding-headers.pl:

2010-11-24  Nicolas Dufresne  <nicolas.dufresne@collabora.co.uk>

        Reviewed by Martin Robinson.

        [GTK] Windowless plugins gets broken key input
        https://bugs.webkit.org/show_bug.cgi?id=49927

        Convert the XEvent::keycode to ASCII before printing it. Not
        doing this was causing false positive in 
        plugins/keyboard-events.html.

        * DumpRenderTree/unix/TestNetscapePlugin/TestNetscapePlugin.cpp:
        (keycode_to_char):
        (webkit_test_plugin_handle_event):

2010-11-24  Jan Erik Hanssen  <jhanssen@sencha.com>

        Reviewed by Antonio Gomes.
